tests/sumo/errors/routes/first_edge_disallowed/ignore/errors.sumo
Warning: Vehicle '0' is not allowed to depart on any lane of its first edge.
